// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diff add attribute 1`] = `
Object {
  "elementUpdateDiff": Object {
    "children": Object {
      "kind": "skip",
    },
    "class": undefined,
    "id": "newId",
    "tag": "div",
  },
  "key": "_",
  "kind": "update",
}
`;

exports[`diff add element 1`] = `
Object {
  "children": Array [
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "a",
      "kind": "update",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "b",
      "kind": "update",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "newC",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "c",
      "kind": "insert",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`diff change key order 1`] = `
Object {
  "children": Array [
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "b",
      "kind": "update",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "c",
      "kind": "update",
    },
    Object {
      "key": "a",
      "kind": "replace",
      "newElement": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "A",
        },
        "class": "css-0",
        "click": null,
        "id": "A",
        "tag": "div",
      },
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`diff complex diff 1`] = `
Object {
  "children": Array [
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "setText",
          "text": "A",
        },
        "class": undefined,
        "id": "",
        "tag": "div",
      },
      "key": "A",
      "kind": "update",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "B",
      "kind": "update",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "K",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "K",
      "kind": "insert",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "children": Array [
            Object {
              "elementUpdateDiff": Object {
                "children": Object {
                  "kind": "skip",
                },
                "class": undefined,
                "id": undefined,
                "tag": "div",
              },
              "key": "text",
              "kind": "update",
            },
            Object {
              "kind": "delete",
            },
          ],
          "kind": "childDiffList",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "C",
      "kind": "update",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "S",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "S",
      "kind": "insert",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "E",
      "kind": "update",
    },
    Object {
      "kind": "delete",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`diff delete all children 1`] = `
Object {
  "children": Array [
    Object {
      "kind": "delete",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "X",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "x",
      "kind": "insert",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "Y",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "y",
      "kind": "insert",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "Z",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "z",
      "kind": "insert",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`diff delete attribute 1`] = `
Object {
  "elementUpdateDiff": Object {
    "children": Object {
      "kind": "skip",
    },
    "class": undefined,
    "id": "",
    "tag": "div",
  },
  "key": "_",
  "kind": "update",
}
`;

exports[`diff delete element 1`] = `
Object {
  "children": Array [
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "a",
      "kind": "update",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "c",
      "kind": "update",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`diff different text return setText 1`] = `
Object {
  "kind": "setText",
  "text": "B",
}
`;

exports[`diff insert element 1`] = `
Object {
  "children": Array [
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "a",
      "kind": "update",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "new",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "new",
      "kind": "insert",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "b",
      "kind": "update",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`diff replace all 1`] = `
Object {
  "children": Array [
    Object {
      "kind": "delete",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "X",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "x",
      "kind": "insert",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "Y",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "y",
      "kind": "insert",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "Z",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "z",
      "kind": "insert",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`diff replace element 1`] = `
Object {
  "children": Array [
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "a",
      "kind": "update",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "new",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "new",
      "kind": "insert",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "c",
      "kind": "update",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`diff same text return skip 1`] = `
Object {
  "kind": "skip",
}
`;

exports[`toString include doctype html 1`] = `"<!doctype html><html lang=\\"ja\\"><head><meta charset=\\"utf-8\\"><meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1.0\\"><title>テストページ</title><meta name=\\"description\\" content=\\"ページの説明\\"><link rel=\\"icon\\" href=\\"/icon\\"><meta name=\\"twitter:card\\" content=\\"summary\\"><meta property=\\"og:url\\" content=\\"https://narumincho.com/\\"><meta property=\\"og:title\\" content=\\"テストページ\\"><meta property=\\"og:site_name\\" content=\\"テストアプリ\\"><meta property=\\"og:description\\" content=\\"ページの説明\\"><meta property=\\"og:image\\" content=\\"https://narumincho.com/assets/kamausagi.png\\"></head><body class=\\"css-0\\"><noscript>テストアプリではJavaScriptを使用します。ブラウザの設定で有効にしてください。</noscript><div class=\\"css-0\\" id=\\"\\">それな</div></body></html>"`;
